# KubeCodeRun

./: .beans.yml  .dockerignore  .env.example  .gitignore  .hadolint.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SIDECAR_PLAN.md  docker-compose.yml  investigation.md  investigation2.yaml  investigation3.md  investigation4.md  investigation5claude.md  investigation6.md  investigation7.md  justfile  mypy.ini  pyproject.toml  requirements.txt
.beans/: KubeCodeRun-0935--decide-forks-job-files-capture-vs-upstream-50.md  KubeCodeRun-1ue3--integrate-upstream-kubecoderun-changes.md  KubeCodeRun-2f6h--re-apply-connection-close-on-files-ad69970.md  KubeCodeRun-9ma5--port-event-driven-pool-replenishment-onto-post-42.md  KubeCodeRun-a5ke--re-apply-gmsh-arm-optional-fallback-9a06b31.md  KubeCodeRun-gkee--re-apply-minio-async-file-read-c5e7c36.md  KubeCodeRun-mulr--re-apply-extra-python-analysis-doc-packages-8343d2.md  KubeCodeRun-p391--create-integration-branch-from-upstreammain.md  KubeCodeRun-sw3t--re-apply-asgi-middleware-swap-99d6139.md  KubeCodeRun-taa0--re-apply-python-side-mount-safety-dir-filter-subse.md  KubeCodeRun-y7ec--validate-integration-tests-lint-smoke-test.md  KubeCodeRun-ym9o--re-apply-uvicorn-keep-alive-timeout-b21969c.md
.github/: CODEOWNERS  pull_request_template.md
Reference/: Behavior.md  codeInterpereterAPI spec.json  openapi-generated.json
dashboard/: index.html
docker/: .dockerignore  DHI_MIGRATE.md  build-images.sh  c-cpp.Dockerfile  d.Dockerfile  entrypoint.sh  fortran.Dockerfile  (+9 more)
(+234 files in other folders)
