[project]
name = "kubecoderun"
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosqlite>=0.22.1",
    "docker>=7.1.0",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "kubernetes>=34.1.0",
    "minio>=7.2.20",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.21",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "requests-unixsocket>=0.4.1",
    "structlog>=25.5.0",
    "unidecode>=1.4.0",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.2",
    "locust>=2.43.0",
    "psutil>=7.2.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "pytest-xdist>=3.5.0",
    "ruff>=0.14.11",
    "ty>=0.0.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_version.py"

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
